samples/_failures_safe/1761670007_c12624_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ac558f32.c:187: error: expected ‘;’, ‘,’ or ‘)’ at end of input
